# Puddle

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
crates/allocators/: Cargo.toml
crates/allocators/src/: freelist.rs  lib.rs  pool.rs  stack.rs
crates/allocators/tests/: free_list_alloc.rs  pool_allocator.rs  stack_allocator.rs
crates/application/: Cargo.toml  build.sh
crates/application/examples/: cube.rs
crates/application/shaders/: bindless.slang  octree.slang  shader.slang  shader.spv
crates/application/src/: lib.rs  window.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/rendering/: Cargo.toml
crates/rendering/src/: lib.rs
crates/rendering/tests/: buffer.rs  test_buffer.rs  test_task_graph.rs
examples/: egui.rs  image.rs  teapod.rs  texture.rs  triangle.rs
examples/shaders/: fragment.glsl  generate_sphere.glsl  vertex.glsl  voxel.glsl
obsidian/Puddle/: 1. Puddle.md  2. Project Structure.canvas
obsidian/Puddle/.obsidian/: workspace.json
shaders/: fragment.glsl  fragment.spv  shader.slang  shader.spv  vertex.glsl  vertex.spv
src/: application.rs  frame.rs  lib.rs  main.rs  setup.rs
src/application/: frame.rs  mod.rs  svo.rs  transform.rs
src/egui/: mod.rs
src/instances/: command_buffer.rs  debugger.rs  device.rs  frame_buffer.rs  image.rs  instance.rs  mod.rs  queue.rs  shader_module.rs  surface.rs  swapchain.rs
src/types/: mod.rs  transofrm.rs  vertex.rs
src/vulkan/: bindless.rs  buffer.rs  mod.rs  pipeline.rs  setup.rs  swapchain.rs
tests/: allocate_buffer.rs  compute.glsl  compute_pipeline.rs
(+76 files in other folders)
